# cortex-dynlink

./: README.md
build_script/: .gitignore  Cargo.toml  code_before_data.ld
build_script/src/: main.rs
build_script/src/utils/: literals.rs  mod.rs  readelf.rs  relocations.rs  symbols.rs
dl-lib/: .gitignore  Cargo.toml  executable  link.ld  run.sh
dl-lib/.cargo/: config.toml
dl-lib/src/: lib.rs  main.rs
dl-lib/src/lib/: binary.rs  mod.rs  utils.rs
dl-lib/src/utils/: binary.rs  instr.rs  mod.rs  module.rs  template.rs
testcase/c/: build.sh  call_external.c  def_external.c  global_values.c  switch_case.c
testcase/ex_1/: Cargo.toml
testcase/ex_1/src/: lib.rs
testcase/ex_2/: Cargo.toml
testcase/ex_2/src/: lib.rs
testcase/ex_3/: Cargo.toml
testcase/ex_3/src/: lib.rs
testcase/ex_args/: Cargo.toml
testcase/ex_args/src/: lib.rs
testcase/ex_iter/: Cargo.toml
testcase/ex_iter/src/: lib.rs
testcase/ex_struct/: Cargo.toml
testcase/ex_struct/.cargo/: config.toml
testcase/ex_struct/src/: lib.rs
testcase/extern_glb_var_a/: Cargo.toml
testcase/extern_glb_var_a/src/: lib.rs
testcase/extern_glb_var_b/: Cargo.toml
testcase/extern_glb_var_b/src/: lib.rs
testcase/extern_symbols_1/: Cargo.toml
testcase/extern_symbols_1/src/: lib.rs
testcase/extern_symbols_1a/: Cargo.toml
testcase/extern_symbols_1a/src/: lib.rs
validate/: Cargo.toml
validate/src/: main.rs
